--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
     
     <div class="topnav">
-    <a class="active" href=https://drive.google.com/drive/folders/1fpeOlAxOB3ZdtA5qv3V5MqfrUsMYIv4Q> HEIM </a> 
+    <a class="active" href=index.html> HEIM </a> 
     <a href=https://www.biltema.no/> BILTEMA</a>
     <a href=https://speedoptions.no/> SPEEDOPTIONS </a> 
     <a href=https://www.24mx.no/> 24MX </a>
