--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <a href="bilder.html"> BILDER</a>
     <a href=https://speedoptions.no/> SPEEDOPTIONS </a> 
     <a href=https://www.24mx.no/> 24MX </a>
-    <a href=https://www.ebay.com/> EBAY </a>
+    <a href=https://nb-no.facebook.com//> FACEBOOK </a>
     <a href=https://www.torstdrikke.no/> TØRST </a>
     </div>
     
